feat: create sph scene. feat: spawn particle in cube form.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
   </head>
   <body>
     <canvas id="scene"></canvas>
-    <script type="module" src="/src/test-scene.ts"></script>
+    <script type="module" src="/src/sph-scene.ts"></script>
   </body>
 </html>
